--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -7,12 +7,16 @@
 		<meta name="viewport" content="width=device-width initial-scale=1" />
 		%sveltekit.head%
 
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎉</text></svg>">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=BBH+Bogle&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Dokdo&family=Yatra+One&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+		</div>
 		<div class="container container-all" >%sveltekit.body%</div>
 	</body>
 </html>
